# GAI4_course

HW_1/: 00_PrepData.ipynb  01_TrainModel.ipynb  pyproject.toml
Unit_1/: 01_TrainModel.ipynb  05_TrainModel_EarlyStop.ipynb
Unit_2/: 00_PrepData.ipynb  01_TrainModel.ipynb  02_MC_Dropout.ipynb  main.py  pyproject.toml
